fix css de l'element Clock et ajout overflow hidden a App

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,9 @@
 .header-container {
     width: 100vw;
-    height: 20vh;
+    height: 15vh;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 0 0.5em;
+    font-size: 1.5em;
 }
